--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
 
     <section id="ford-fusion">
         <div class="container">
-            <img class="store-front" src="./Midias/Ford Fusion 2016.jpeg" alt="Fachada da Loja Games World">
+            <img class="car-front" src="./Midias/Ford Fusion 2016.jpeg" alt="Ford Fusion branco">
             <div>
-                <h2> Ford Fusion </h2>
+                <div class="alinhamento">
+                    <h2> Ford Fusion </h2> 
+                    <img class="logo" src="./Midias/Ford logo.png" alt="Logo Ford">
+                </div>
                 <p> O Ford Fusion apresenta uma série de pontos positivos que o tornam uma escolha atraente para os motoristas que buscam um sedã de alto desempenho e conforto. Algumas características notáveis incluem: </p>
                 <p> Design Moderno e Elegante: Linhas fluidas e detalhes estilizados proporcionam uma presença visual atraente.
                 <p>Desempenho Confidente: Motores potentes oferecem uma condução ágil e responsiva.</p>
@@ -58,10 +61,6 @@
                 <p>Eficiência de Combustível: Motores eficientes proporcionam boa economia de combustível.</p>
                 <p>Segurança em Destaque: Recursos avançados, como airbags, controle de estabilidade e assistência de frenagem.</p>
                 <p>Manutenção Acessível: Rede de assistência técnica da Ford contribui para uma manutenção mais acessível..</p>
-                
-                <ul class="brands-list">
-                    <li> <img src="./Midias/Ford logo.png" alt="Logo Xbox"></li>
-                </ul>
             </div>
         </div>
     </section>
@@ -116,7 +115,7 @@
 
     <footer>
         <div class="container">
-            <p> &copy; Games World - Todos os direitos reservados - 2024</p>
+            <p> &copy; Carros Premium & Acessíveis - Todos os direitos reservados - 2024</p>
         </div>
     </footer>
 </body>
