Carros adicionados / Falta acabamento

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
             <div class="container">
-            <h1>Carros Premium & Acessíveis </h1>
+            <h1>Elegant Cars </h1>
             <nav>
                 <ul>
                     <li>
@@ -63,11 +63,114 @@
                 <p>Manutenção Acessível: Rede de assistência técnica da Ford contribui para uma manutenção mais acessível..</p>
             </div>
         </div>
-    </section>
+    </section> <br> <br>
 
 
 
+    <section id="cruze-ltz">
+        <div class="container">
+            <div>
+                <div class="alinhamento">
+                    <h2> Cruze LTZ </h2> 
+                    <img class="logo" src="./Midias/Chevrolet Logo.png" alt="Logo Chevrolet">
+                </div>
+                <p> O Chevrolet Cruze LTZ é uma opção atraente para quem busca um sedan que combina estilo, desempenho e tecnologia. Com um design moderno e elegante, este veículo oferece uma série de recursos avançados que tornam cada viagem mais prazerosa e segura. Pontos principais: </p>
+                <p> Design Distinto: Linhas elegantes e detalhes exclusivos conferem singularidade ao visual do Cruze LTZ.
+                <p>Inovação Tecnológica: Integração de tecnologias avançadas, oferecendo entretenimento, conectividade e controles modernos.</p>
+                <p>Conforto Interior: Interior espaçoso, bem-acabado, com materiais de alta qualidade e assentos ergonomicamente projetados.</p>
+                <p>Economia de Combustível: Destaca-se pelo motor 1.4, proporcionando uma incrível economia de combustível de até 17 km por litro na estrada.</p>
+                <p>Segurança: Recursos de segurança modernos, como airbags, controle de estabilidade, freios ABS e sistemas de assistência ao motorista.</p>
+                <p>Manobrabilidade Suave: Condução confortável e estável, graças à manobrabilidade suave e à suspensão bem-calibrada.</p>
+            </div>
+            <img class="car-right" src="./Midias/Chevrolet Cruze LTZ 2017.jpg" alt="Cruze LTZ branco">
+        </div>
+    </section>  <br> <br>
 
+
+
+    <section id="hyundai-elantra">
+        <div class="container">
+            <img class="car-front" src="./Midias/hyundai elantra 2017.jpg" alt="Hyundai Elantra">
+            <div>
+                <div class="alinhamento">
+                    <h2> Hyundai Elantra </h2> 
+                    <img class="logo" src="./Midias/Hyundai logo.png" alt="Logo Hyundai">
+                </div>
+                <p> O Ford Fusion apresenta uma série de pontos positivos que o tornam uma escolha atraente para os motoristas que buscam um sedã de alto desempenho e conforto. Algumas características notáveis incluem: </p>
+                <p> Design Moderno e Elegante: Linhas fluidas e detalhes estilizados proporcionam uma presença visual atraente.
+                <p>Desempenho Confidente: Motores potentes oferecem uma condução ágil e responsiva.</p>
+                <p>Tecnologia Avançada: Recursos modernos, como sistemas de entretenimento, conectividade Bluetooth e controles no volante.</p>
+                <p>Interior Espaçoso e Confortável: Amplo espaço para ocupantes e bagagem, com materiais de alta qualidade.</p>
+                <p>Eficiência de Combustível: Motores eficientes proporcionam boa economia de combustível.</p>
+                <p>Segurança em Destaque: Recursos avançados, como airbags, controle de estabilidade e assistência de frenagem.</p>
+                <p>Manutenção Acessível: Rede de assistência técnica da Ford contribui para uma manutenção mais acessível..</p>
+            </div>
+        </div>
+    </section> <br> <br>
+
+
+
+    <section id="bmw-325i">
+        <div class="container">
+            <div>
+                <div class="alinhamento">
+                    <h2> BMW 325i </h2> 
+                    <img class="logo" src="./Midias/BMW Logo.png" alt="Logo BMW">
+                </div>
+                <p> O Chevrolet Cruze LTZ é uma opção atraente para quem busca um sedan que combina estilo, desempenho e tecnologia. Com um design moderno e elegante, este veículo oferece uma série de recursos avançados que tornam cada viagem mais prazerosa e segura. Pontos principais: </p>
+                <p> Design Distinto: Linhas elegantes e detalhes exclusivos conferem singularidade ao visual do Cruze LTZ.
+                <p>Inovação Tecnológica: Integração de tecnologias avançadas, oferecendo entretenimento, conectividade e controles modernos.</p>
+                <p>Conforto Interior: Interior espaçoso, bem-acabado, com materiais de alta qualidade e assentos ergonomicamente projetados.</p>
+                <p>Economia de Combustível: Destaca-se pelo motor 1.4, proporcionando uma incrível economia de combustível de até 17 km por litro na estrada.</p>
+                <p>Segurança: Recursos de segurança modernos, como airbags, controle de estabilidade, freios ABS e sistemas de assistência ao motorista.</p>
+                <p>Manobrabilidade Suave: Condução confortável e estável, graças à manobrabilidade suave e à suspensão bem-calibrada.</p>
+            </div>
+            <img class="car-right" src="./Midias/BMW 325I.jpeg" alt="BMW 325i">
+        </div>
+    </section>  <br> <br>
+
+
+
+    <section id="audi-a5">
+        <div class="container">
+            <img class="car-front" src="./Midias/Audi A5.jpg" alt="Audi A5">
+            <div>
+                <div class="alinhamento">
+                    <h2> Audi A5 </h2> 
+                    <img class="logo" src="./Midias/Audi Logo.webp" alt="Logo Audi">
+                </div>
+                <p> O Ford Fusion apresenta uma série de pontos positivos que o tornam uma escolha atraente para os motoristas que buscam um sedã de alto desempenho e conforto. Algumas características notáveis incluem: </p>
+                <p> Design Moderno e Elegante: Linhas fluidas e detalhes estilizados proporcionam uma presença visual atraente.
+                <p>Desempenho Confidente: Motores potentes oferecem uma condução ágil e responsiva.</p>
+                <p>Tecnologia Avançada: Recursos modernos, como sistemas de entretenimento, conectividade Bluetooth e controles no volante.</p>
+                <p>Interior Espaçoso e Confortável: Amplo espaço para ocupantes e bagagem, com materiais de alta qualidade.</p>
+                <p>Eficiência de Combustível: Motores eficientes proporcionam boa economia de combustível.</p>
+                <p>Segurança em Destaque: Recursos avançados, como airbags, controle de estabilidade e assistência de frenagem.</p>
+                <p>Manutenção Acessível: Rede de assistência técnica da Ford contribui para uma manutenção mais acessível..</p>
+            </div>
+        </div>
+    </section> <br> <br>
+
+
+
+    <section id="volksvagem-virtus">
+        <div class="container">
+            <div>
+                <div class="alinhamento">
+                    <h2> Volksvagem Virtus </h2> 
+                    <img class="logo" src="./Midias/Wolksvagem logo.png" alt="Logo Wolksvagem">
+                </div>
+                <p> O Chevrolet Cruze LTZ é uma opção atraente para quem busca um sedan que combina estilo, desempenho e tecnologia. Com um design moderno e elegante, este veículo oferece uma série de recursos avançados que tornam cada viagem mais prazerosa e segura. Pontos principais: </p>
+                <p> Design Distinto: Linhas elegantes e detalhes exclusivos conferem singularidade ao visual do Cruze LTZ.
+                <p>Inovação Tecnológica: Integração de tecnologias avançadas, oferecendo entretenimento, conectividade e controles modernos.</p>
+                <p>Conforto Interior: Interior espaçoso, bem-acabado, com materiais de alta qualidade e assentos ergonomicamente projetados.</p>
+                <p>Economia de Combustível: Destaca-se pelo motor 1.4, proporcionando uma incrível economia de combustível de até 17 km por litro na estrada.</p>
+                <p>Segurança: Recursos de segurança modernos, como airbags, controle de estabilidade, freios ABS e sistemas de assistência ao motorista.</p>
+                <p>Manobrabilidade Suave: Condução confortável e estável, graças à manobrabilidade suave e à suspensão bem-calibrada.</p>
+            </div>
+            <img class="car-right" src="./Midias/Wolksvagem Virtus 2018.jpg" alt="Wolksvagem Virtus">
+        </div>
+    </section>  <br> <br>
 
 
 
