--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <header>
             <div class="container">
+                <img id="logomarca" src="./Midias/LOGO-ELEGANT-CARS.png" alt="Ford Fusion branco">
             <h1>Elegant Cars </h1>
             <nav>
                 <ul>
@@ -27,7 +28,7 @@
                         <a href="#hyundai-elantra"> Hyundai Elantra</a>
                     </li>
                     <li>
-                        <a href="#bmw-325i"> BMW 325i</a>
+                        <a href="#bmw-328i"> BMW 328i</a>
                     </li>
                     <li>
                         <a href="#audi-a5"> Audi A5</a>
@@ -96,36 +97,33 @@
                     <h2> Hyundai Elantra </h2> 
                     <img class="logo" src="./Midias/Hyundai logo.png" alt="Logo Hyundai">
                 </div>
-                <p> O Ford Fusion apresenta uma série de pontos positivos que o tornam uma escolha atraente para os motoristas que buscam um sedã de alto desempenho e conforto. Algumas características notáveis incluem: </p>
-                <p> Design Moderno e Elegante: Linhas fluidas e detalhes estilizados proporcionam uma presença visual atraente.
-                <p>Desempenho Confidente: Motores potentes oferecem uma condução ágil e responsiva.</p>
-                <p>Tecnologia Avançada: Recursos modernos, como sistemas de entretenimento, conectividade Bluetooth e controles no volante.</p>
-                <p>Interior Espaçoso e Confortável: Amplo espaço para ocupantes e bagagem, com materiais de alta qualidade.</p>
-                <p>Eficiência de Combustível: Motores eficientes proporcionam boa economia de combustível.</p>
-                <p>Segurança em Destaque: Recursos avançados, como airbags, controle de estabilidade e assistência de frenagem.</p>
-                <p>Manutenção Acessível: Rede de assistência técnica da Ford contribui para uma manutenção mais acessível..</p>
+                <p> O Hyundai Elantra é uma opção notável para quem procura um sedan que oferece estilo, desempenho e tecnologia. Este veículo combina design moderno com uma série de recursos avançados, proporcionando uma experiência de condução agradável e sofisticada. Pontos principais: </p>
+                <p> Estilo Moderno e Aerodinâmico: O Elantra destaca-se com um design moderno e aerodinâmico, apresentando linhas fluidas e detalhes estilizados.
+                <p>Eficiência de Combustível: Equipado com motores eficientes, o Elantra oferece uma excelente economia de combustível, tornando-o uma escolha econômica para os proprietários.</p>
+                <p>Interior Bem Projetado: O interior do Elantra é cuidadosamente projetado, oferecendo um ambiente confortável e espaçoso, com materiais de alta qualidade e assentos ergonomicamente concebidos.</p>
+                <p>Tecnologia Avançada: O Elantra 2017 conta com recursos tecnológicos modernos, incluindo sistemas de entretenimento, conectividade Bluetooth e controles intuitivos para proporcionar uma experiência de condução conectada.</p>
+                <p>Tecnologia Avançada: O Elantra 2017 conta com recursos tecnológicos modernos, incluindo sistemas de entretenimento, conectividade Bluetooth e controles intuitivos para proporcionar uma experiência de condução conectada.</p>
             </div>
         </div>
     </section> <br> <br>
 
 
 
-    <section id="bmw-325i">
+    <section id="bmw-328i">
         <div class="container">
             <div>
                 <div class="alinhamento">
-                    <h2> BMW 325i </h2> 
+                    <h2> BMW 328i </h2> 
                     <img class="logo" src="./Midias/BMW Logo.png" alt="Logo BMW">
                 </div>
-                <p> O Chevrolet Cruze LTZ é uma opção atraente para quem busca um sedan que combina estilo, desempenho e tecnologia. Com um design moderno e elegante, este veículo oferece uma série de recursos avançados que tornam cada viagem mais prazerosa e segura. Pontos principais: </p>
-                <p> Design Distinto: Linhas elegantes e detalhes exclusivos conferem singularidade ao visual do Cruze LTZ.
-                <p>Inovação Tecnológica: Integração de tecnologias avançadas, oferecendo entretenimento, conectividade e controles modernos.</p>
-                <p>Conforto Interior: Interior espaçoso, bem-acabado, com materiais de alta qualidade e assentos ergonomicamente projetados.</p>
-                <p>Economia de Combustível: Destaca-se pelo motor 1.4, proporcionando uma incrível economia de combustível de até 17 km por litro na estrada.</p>
-                <p>Segurança: Recursos de segurança modernos, como airbags, controle de estabilidade, freios ABS e sistemas de assistência ao motorista.</p>
-                <p>Manobrabilidade Suave: Condução confortável e estável, graças à manobrabilidade suave e à suspensão bem-calibrada.</p>
+                <p> A BMW 328i é uma obra-prima sobre rodas que transcende a mera definição de um sedan. Nesse modelo que exala luxo e desempenho, a BMW alcança uma sinfonia de elegância e potência. É um convite a uma experiência de condução que vai além do comum, mergulhando em um universo onde o requinte encontra a pura emoção automotiva. Pontos principais: </p>
+                <p> Design Visionário: Cada curva da 328i é uma declaração de estilo, um testemunho da ousadia e visão inovadora da BMW no mundo do design automotivo. </p>
+                <p> Poder em Movimento: Sob o capô, a 328i revela um coração pulsante, traduzindo-se em uma performance que desafia as expectativas, proporcionando uma resposta imediata ao toque no acelerador. </p>
+                <p> O interior da 328i é um santuário de tecnologia avançada, onde inovação e elegância se entrelaçam para criar uma experiência de condução sem igual. </p>
+                <p> Luxo Personalizado: Cada detalhe do habitáculo da 328i é meticulosamente selecionado, transformando o interior em um espaço exclusivo, onde o luxo é personalizado para atender aos padrões mais exigentes. </p>
+                <p> Sustentabilidade com Estilo: Além do desempenho emocionante, a BMW 328i incorpora tecnologias sustentáveis, mostrando que luxo e responsabilidade ambiental podem coexistir harmoniosamente. </p>
             </div>
-            <img class="car-right" src="./Midias/BMW 325I.jpeg" alt="BMW 325i">
+            <img class="car-right" src="./Midias/BMW 328I.jpg" alt="BMW 328i">
         </div>
     </section>  <br> <br>
 
@@ -139,14 +137,12 @@
                     <h2> Audi A5 </h2> 
                     <img class="logo" src="./Midias/Audi Logo.webp" alt="Logo Audi">
                 </div>
-                <p> O Ford Fusion apresenta uma série de pontos positivos que o tornam uma escolha atraente para os motoristas que buscam um sedã de alto desempenho e conforto. Algumas características notáveis incluem: </p>
-                <p> Design Moderno e Elegante: Linhas fluidas e detalhes estilizados proporcionam uma presença visual atraente.
-                <p>Desempenho Confidente: Motores potentes oferecem uma condução ágil e responsiva.</p>
-                <p>Tecnologia Avançada: Recursos modernos, como sistemas de entretenimento, conectividade Bluetooth e controles no volante.</p>
-                <p>Interior Espaçoso e Confortável: Amplo espaço para ocupantes e bagagem, com materiais de alta qualidade.</p>
-                <p>Eficiência de Combustível: Motores eficientes proporcionam boa economia de combustível.</p>
-                <p>Segurança em Destaque: Recursos avançados, como airbags, controle de estabilidade e assistência de frenagem.</p>
-                <p>Manutenção Acessível: Rede de assistência técnica da Ford contribui para uma manutenção mais acessível..</p>
+                <p> O Audi A5 é um verdadeiro embaixador de elegância e desempenho na linha de sedans de luxo. Combinando o design distintivo da Audi com tecnologia de ponta, o A5 se destaca como um símbolo de sofisticação automotiva, proporcionando uma experiência de condução que transcende as expectativas convencionais. Pontos principais: </p>
+                <p> Elegância Cativante: O Audi A5 ostenta um design exterior cativante, caracterizado por proporções equilibradas e uma presença marcante que transmite sofisticação. </p>
+                <p> Desempenho de Alto Nível: Sob o capô, o A5 entrega um desempenho dinâmico, combinando potência e agilidade para uma experiência de condução que proporciona emoção a cada curva. </p>
+                <p> Luxo em Cada Detalhe: O interior do Audi A5 é um compromisso com o luxo, com materiais premium, artesanato impecável e uma atenção meticulosa aos detalhes. </p>
+                <p>Inovação Sustentável: Comprometido com a responsabilidade ambiental, o Audi A5 incorpora tecnologias inovadoras para maximizar a eficiência de combustível sem comprometer a potência. </p>
+                <p> Sonoridade Harmoniosa: A qualidade sonora do sistema de áudio premium do Audi A5 cria uma trilha sonora personalizada para cada viagem, elevando ainda mais a experiência de condução. </p>
             </div>
         </div>
     </section> <br> <br>
@@ -160,13 +156,12 @@
                     <h2> Volksvagem Virtus </h2> 
                     <img class="logo" src="./Midias/Wolksvagem logo.png" alt="Logo Wolksvagem">
                 </div>
-                <p> O Chevrolet Cruze LTZ é uma opção atraente para quem busca um sedan que combina estilo, desempenho e tecnologia. Com um design moderno e elegante, este veículo oferece uma série de recursos avançados que tornam cada viagem mais prazerosa e segura. Pontos principais: </p>
-                <p> Design Distinto: Linhas elegantes e detalhes exclusivos conferem singularidade ao visual do Cruze LTZ.
-                <p>Inovação Tecnológica: Integração de tecnologias avançadas, oferecendo entretenimento, conectividade e controles modernos.</p>
-                <p>Conforto Interior: Interior espaçoso, bem-acabado, com materiais de alta qualidade e assentos ergonomicamente projetados.</p>
-                <p>Economia de Combustível: Destaca-se pelo motor 1.4, proporcionando uma incrível economia de combustível de até 17 km por litro na estrada.</p>
-                <p>Segurança: Recursos de segurança modernos, como airbags, controle de estabilidade, freios ABS e sistemas de assistência ao motorista.</p>
-                <p>Manobrabilidade Suave: Condução confortável e estável, graças à manobrabilidade suave e à suspensão bem-calibrada.</p>
+                <p> O Volkswagen Virtus 2018 é uma escolha prática e versátil, oferecendo um equilíbrio admirável entre eficiência, tecnologia e espaço, tudo encapsulado em um design urbano e atraente. Pontos principais: </p>
+                <p> Eficiência Energética: Equipado com motores eficientes, o Virtus destaca-se pela boa eficiência de combustível, proporcionando uma condução econômica e amiga do meio ambiente. </p>
+                <p> Espaço Interno Surpreendente: Apesar de compacto por fora, o Virtus surpreende com um interior espaçoso e bem-projetado, garantindo conforto para motorista e passageiros. </p>
+                <p> Tecnologia Integrada: Com recursos de tecnologia intuitivos, o Virtus oferece sistemas de infoentretenimento modernos, conectividade Bluetooth e funcionalidades práticas para tornar cada viagem mais agradável. </p>
+                <p> Segurança Em Foco: A Volkswagen prioriza a segurança, e o Virtus 2018 não é exceção. Recursos como airbags, freios ABS e controles de estabilidade contribuem para uma condução mais segura. </p>
+                <p> Facilidade de Manutenção: A reputação da Volkswagen por durabilidade e uma ampla rede de assistência técnica fazem da manutenção do Virtus 2018 uma experiência acessível e conveniente. </p>
             </div>
             <img class="car-right" src="./Midias/Wolksvagem Virtus 2018.jpg" alt="Wolksvagem Virtus">
         </div>
@@ -208,7 +203,7 @@
                 </div>
                 <div>
                     <h3> Venha até nós</h3>
-                    <p> Rua JavaScript nº 123, Vila HTML - São Paulo - SP </p>
+                    <p> Rua Fast and furious nº 777, Ribeira - Salvador - BA </p>
                 </div>
             </div>
         </div>
@@ -218,7 +213,7 @@
 
     <footer>
         <div class="container">
-            <p> &copy; Carros Premium & Acessíveis - Todos os direitos reservados - 2024</p>
+            <p> &copy; Elegant Cars - Todos os direitos reservados - 2024</p>
         </div>
     </footer>
 </body>
